# memexmcp

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
src/memex/: __init__.py  chunker.py  cli.py  config.py  embedder.py  gui.py  gui_worker.py  indexer.py  mcp_config.py  mcp_server.py  paths.py  search.py  setup_wizard.py  store.py  style.py
tests/: test_indexer.py  test_mcp_server.py  test_paths.py
