[project]
name = "memex-mcp"
version = "0.1.2"
description = "Local semantic + keyword search over your codebases and documents, served to Claude (or any MCP client) over MCP."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "drhalto" },
]
keywords = [
    "mcp",
    "model-context-protocol",
    "embeddings",
    "semantic-search",
    "vector-search",
    "rag",
    "ollama",
    "gemini",
    "sqlite-vec",
    "claude",
    "claude-desktop",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Indexing",
]
dependencies = [
    "sqlite-vec>=0.1.9",
    "httpx>=0.27",
    "typer>=0.12",
    "mcp>=1.2",
    "keyring>=25",
    "pypdf>=5",
    "python-docx>=1.1",
    "selectolax>=0.3",
]

[project.urls]
Homepage  = "https://github.com/drhalto/memexmcp"
Repository = "https://github.com/drhalto/memexmcp"
Issues    = "https://github.com/drhalto/memexmcp/issues"
Releases  = "https://github.com/drhalto/memexmcp/releases"
Changelog = "https://github.com/drhalto/memexmcp/blob/main/CHANGELOG.md"

[project.scripts]
memex-cli = "memex.cli:app"
memex-mcp-server = "memex.mcp_server:main"

[project.gui-scripts]
Memex = "memex.gui:main"

[project.optional-dependencies]
gui = ["PySide6>=6.7"]
dev = ["ruff>=0.6", "pytest>=8", "pyinstaller>=6.10"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/memex"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["typer.Argument", "typer.Option"]
